# js-randomness-predictor-cpp

./: .clang-format  .clangd  .gitignore  .prettierrc  README.md  binding.gyp  clang-format.sh  index.cjs  index.d.ts  index.mjs  package-lock.json  package.json
.github/workflows/: build.yaml  build_and_publish.yaml  prebuild.yaml  prebuild_with_prebuild_install.yaml.txt  publish.yaml  tests.yaml  tests.yaml.txt  tests_and_maybe_publish.yaml
scripts/: build-and-run-tests.mjs  clang-format.mjs  get-cpp-sources-for-binding-gyp.mjs
src/: ChromePredictor.cpp  ChromePredictor.hpp  FirefoxPredictor.cpp  FirefoxPredictor.hpp  V8Predictor.cpp  V8Predictor.hpp  chrome-predictor.cpp  chrome-predictor.hpp  firefox-predictor.cpp  firefox-predictor.hpp  v8-predictor.cpp  v8-predictor.hpp
src/wrappers/: ChromeWrapper.cpp  ChromeWrapper.hpp  FirefoxWrapper.cpp  FirefoxWrapper.hpp  NodeJsVersionNapi.hpp  V8Wrapper.cpp  V8Wrapper.hpp  chrome-wrapper.cpp  chrome-wrapper.hpp  firefox-wrapper.cpp  firefox-wrapper.hpp  js-randomness-predictor-cpp.cpp  v8-wrapper.cpp  v8-wrapper.hpp
tests/: CMakeLists.txt  Chrome.test.cpp  Firefox.test.cpp  V8.test.cpp  build-and-run-tests.sh
tests/js/: index.js
